<package>
  <name>cob_people_detection</name>
  <version>1.0.0</version>

  <description>
    Detects persons through head and face detection and identifies the detected faces. The results are tracked over time to increase confidence. The system is optimized to be used with a Microsoft Kinect or Asus Xtion Pro Live sensor but could also handle different sensors as long as depth and color images are provided.  </description>

  <license>LGPL</license>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>
  <author>Thomas Zwölfer</author>

  <url>http://ros.org/wiki/cob_people_detection</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <!--build_depend>roslib</build_depend-->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cob_image_flip</build_depend>
  <build_depend>cob_vision_utils</build_depend>
  <build_depend>cob_perception_msgs</build_depend>
  <!--build_depend>kdl_parser</build_depend-->
  <!--build_depend>orocos_kdl</build_depend-->

  <run_depend>roscpp</run_depend>
  <!--run_depend>roslib</run_depend-->
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>cob_image_flip</run_depend>
  <run_depend>cob_vision_utils</run_depend>
  <run_depend>cob_perception_msgs</run_depend>
  <!--run_depend>kdl_parser</run_depend-->
  <!--run_depend>orocos_kdl</run_depend-->
  <run_depend>openni2_camera</run_depend>
  <run_depend>openni2_launch</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>


