<package format="2">
	<name>cob_people_detection</name>
	<version>1.0.0</version>

	<description>
		Detects persons through head and face detection and identifies the detected faces. The results are tracked over time to increase confidence. The system is optimized to be used with a Microsoft Kinect or Asus Xtion Pro Live sensor but could also handle different sensors as long as depth and color images are provided.
	</description>

	<license>LGPL</license>

	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>
	<author>Thomas Zwölfer</author>

	<url>http://ros.org/wiki/cob_people_detection</url>

	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>cmake_modules</depend>
	<depend>roscpp</depend>
	<depend>message_generation</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>actionlib</depend>
	<depend>sensor_msgs</depend>
	<depend>actionlib_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>stereo_msgs</depend>
	<depend>image_transport</depend>
	<depend>image_geometry</depend>
	<depend>tf</depend>
	<depend>nodelet</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>libpcl-all-dev</depend>
	<depend>pcl_ros</depend>
	<depend>boost</depend>
	<depend>libopencv-dev</depend>
	<depend>cv_bridge</depend>
	<depend>cob_image_flip</depend>
	<depend>cob_vision_utils</depend>
	<depend>cob_perception_msgs</depend>
	<!--depend>kdl_parser</depend-->
	<!--depend>orocos_kdl</depend-->

	<exec_depend>message_runtime</exec_depend>
	<exec_depend>image_view</exec_depend>

	<export>
		<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	</export>
</package>


