<package>
  <name>cob_people_detection_msgs</name>
  <version>1.0.0</version>

  <description>
     Contains some special messages used by cob_people_detection.
  </description>

  <license>LGPL</license>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <author>Richard Bormann</author>

  <url>http://ros.org/wiki/cob_people_detection_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>


