<package>
  <name>cob_people_tracking_filter</name>
  <version>1.0.4</version>
  <description>
    A collection of filtering tools for tracking people's locations
  </description>
  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <author>Caroline Pantofaru, Olha Meyer</author>
  <license>BSD</license>
  <!--url>http://ros.org/wiki/people_tracking_filter</url-->
  <url type="website">http://ros.org/wiki/cob_people_perception</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cob_perception_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <build_depend>bfl</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cob_perception_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <run_depend>bfl</run_depend>
  <run_depend>boost</run_depend>

</package>


