<package format="2">
	<name>cob_people_tracking_filter</name>
	<version>1.0.4</version>
	<description>
		A collection of filtering tools for tracking people's locations
	</description>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<author>Caroline Pantofaru, Olha Meyer</author>
	<license>BSD</license>
	<!--url>http://ros.org/wiki/people_tracking_filter</url-->
	<url type="website">http://ros.org/wiki/cob_people_perception</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>bfl</depend>
	<depend>boost</depend>
	<depend>cob_perception_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>message_filters</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>tf</depend>

</package>


